[update] 从yaml文件中读取配置